...
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zr7-fs-4nv">
                                                <rect key="frame" x="298.5" y="24" width="74.5" height="48.5"/>
                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="History">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <segue destination="NuM-t6-73D" kind="show" id="tmY-4J-LTW"/>
                                                </connections>
                                            </button>
...
                                            <constraint firstItem="zr7-fs-4nv" firstAttribute="width" secondItem="MXJ-9z-L8F" secondAttribute="width" multiplier="0.2" id="ygh-2e-Dsq"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LAm-tk-LBm">
                                        <rect key="frame" x="0.0" y="96.5" width="373" height="80.5"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hzy-nm-Y7g">
                                                <rect key="frame" x="0.0" y="0.0" width="257" height="80.5"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                                <connections>
                                                    <action selector="valchanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="TnQ-H0-D5k"/>
                                                </connections>
...
