...
      case 3: msg = "Bap Input !"
          break
        
      default:
          break
      }
         let alert = UIAlertController(title: "Alert", message: msg, preferredStyle: .alert)
         
         alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: {_ in

         }))
         self.present(alert, animated: true)
     }
}

...
